@@ -412,7 +412,7 @@ from the displayed name.
       and <tt>MANGLED</tt> are case-sensitive.
 
 @note
-  The GCC plug-in based function instrumentation supports all above mentioned
+  Instrumentation via the GCC plug-in or Intel compilers support all above mentioned
   filtering features when using the @verb{--instrument-filter=<file>} flag to the
   @scorep instrumenter (see Sec. @secref{compiler_instrumentation}).
   The filter file is then used during compilation time but the use of such a filter file
